# skills

./: .gitignore  AGENTS.md  LICENSE.md  README-EN.md  README.md  eslint.config.js  meta.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: release-chandao-cli.yml  release-halo-cli.yml  release.yml
apps/chandao-cli/: Cargo.toml  Makefile  README.md  agent-setup.md  core  index.js  package-lock.json  package.json
apps/chandao-cli/src/: actions.rs  auth.rs  client.rs  env.rs  lib.rs  main.rs  markdown.rs  ticket_tail.rs  utils.rs
apps/chandao-cli/src/actions/: bug.rs  build.rs  epic.rs  execution.rs  file.rs  mod.rs  product.rs  productplan.rs  program.rs  project.rs  release.rs  requirement.rs  story.rs  system.rs  task.rs  testcase.rs  testtask.rs  user.rs
apps/halo/: .gitignore  Makefile  index.js  main.go  package-lock.json  package.json
apps/halo-cli/: .gitignore  Cargo.toml  Makefile  README.md  agent-setup.md  go.mod  index.js  package-lock.json  package.json
apps/halo-cli/.github/workflows/: release.yml
apps/halo-cli/internal/actions/: actions_test.go  unpublish.go  update.go
apps/halo-cli/internal/api/: client.go  client_test.go
apps/halo-cli/src/: actions.rs  client.rs  env.rs  lib.rs  main.rs  markdown.rs  utils.rs
apps/halo-cli/tests/: markdown_test.rs  utils_test.rs
memos/docs/: actions-memo.md  actions-user.md
memos/scripts/: api.cjs
scripts/: cli.ts
skills/antfu/: SKILL.md
skills/auto-save/: SKILL.md
skills/autosave/: SKILL.md
skills/chandao/: CHANDAO_ITER_XIAOBEI_TODO.md  GENERATION.md  SKILL.md  debug_exec.cjs  debug_fallback.cjs  debug_tasks.cjs
skills/ding/: SKILL.md
skills/ding-agent/: SKILL.md
skills/dingtalk-connector/: GENERATION.md  SKILL.md
skills/dingtalk-document/: GENERATION.md  SKILL.md
skills/fnnas-docs/: SKILL.md
(+194 files in other folders)
