[package]
name = "chandao-cli"
version = "2.0.5-beta.4"
description = "CLI tool for 禅道 (ZenTao) project management system via RESTful API v2"
license = "MIT"
repository = "https://github.com/tnnevol/skills"
edition = "2024"

[lib]
name = "chandao_cli"
path = "src/lib.rs"

[[bin]]
name = "chandao"
path = "src/main.rs"

[dependencies]
clap = { version = "4", default-features = false, features = ["std", "derive", "help", "usage", "error-context", "suggestions"] }
ureq = { version = "2", default-features = false, features = ["tls", "gzip", "json"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
dotenvy = "0.15"
chrono = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
