[package]
name = "halo-cli"
version = "2.0.0"
description = "CLI tool to manage blog posts in Halo CMS"
license = "MIT"
repository = "https://github.com/tnnevol/skills"
edition = "2024"

[dependencies]
clap = { version = "4", default-features = false, features = ["std", "derive", "help", "usage", "error-context", "suggestions"] }
ureq = { version = "2", default-features = false, features = ["tls", "gzip"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
dotenvy = "0.15"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"